<resources>
    <string name="app_name">Local_Syogi</string>

    <!-- アカウント設定画面 -->
    <string name="account_info"><u>アカウント</u></string>
    <string name="all_log"><u>対戦記録</u></string>
    <!-- 設定画面 -->
    <string name="syogi"><u>本将棋</u></string>
    <string name="check_syogi"><u>王手将棋</u></string>
    <string name="annnan_syogi"><u>安南将棋</u></string>
    <string name="secound_syogi"><u>2手差し将棋</u></string>
    <string name="quiin_syogi"><u>クイーン将棋</u></string>
    <string name="piece_syogi"><u>持駒制限将棋</u></string>
    <string name="chaos_syogi"><u>カオス将棋</u></string>
    <string name="button">Button</string>

    <!--  持ち時間選択リスト(秒)-->
    <string-array name="timeList">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
</resources>
